<resources>
    <string name="app_name">GoGoCarpon</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="home">Home</string>
    <string name="google_map_key">AIzaSyCpaQoYx_PVGQf927YGoAtbzVBRMrzmBeA</string>

    <string name="tab_feature_deal">Feature</string>
    <string name="tab_all_deal">All deals</string>
    <string name="tab_upcoming_deal">Upcoming</string>
    <string name="tab_expired_deal">Expired</string>

    <!-- Normal message. -->
    <string name="confirmation">Confirmation</string>
    <string name="no_results">No results found for \"%s\"</string>
    <string name="back">Back</string>
    <string name="refine">Refine</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="warning">Warning</string>

    <string name="notify">Notify</string>
    <string name="notify_loading">Loading \.\.\.</string>
    <string name="notify_login_success">Login successfully!</string>
    <string name="notify_create_account_success">Create account successfully !</string>
    <string name="notify_request_login">Please login before purchase order!</string>
    <string name="notify_post_comment_success">Post comment successfully!</string>
    <string name="notify_update_profile_success">Update profile successfully !!!</string>
    <string name="notify_change_pw_success">Change password successfully !!!</string>
    <string name="notify_payment_success">Purchase successfully !!! Purchase ID : </string>
    <string name="notify_dont_have_product">Dont have product</string>

    <string name="error">Error</string>
    <string name="error_url">URL error.!!!</string>
    <string name="error_url_not_existed">URL not existed.</string>
    <string name="error_session_expired.">Session expired.</string>
    <string name="error_internet_connection_title">Connection failed</string>
    <string name="error_internet_connection_content">This application requires network access. Enable mobile network or Wi-Fi to download data.</string>
    <string name="error_target_host">Target host must not be null, or set in parameters.!!!</string>
    <string name="error_init_Paypal_library">Error initializing PayPal Library</string>
    <string name="error_get_comment">Get comment error ! Please try again!</string>
    <string name="error_post_comment">Post comment error! Please try again!</string>
    <string name="error_input_comment">Please input comment!</string>

    <string name="error_input_username_empty">Username cannot be empty!</string>
    <string name="error_input_display_name_empty">Display name cannot be empty!</string>
    <string name="error_input_email_invalied">Email invalied!</string>
    <string name="error_input_pw_empty">Password cannot be empty!</string>
    <string name="error_input_verify_pw">Password is not same verify password !</string>
    <string name="error_account_invalied">Account invalied</string>

    <string name="error_input_receiver_address_empty">Receiver address cannot be empty!</string>
    <string name="error_input_receiver_phone_empty">Receiver phone cannot be empty!</string>
    <string name="error_input_receiver_name_empty">Receiver name cannot be empty!</string>

    <string name="error_payment_failed">Payment failed! Please try again</string>

    <!-- EnMasse Choose City. -->
    <string name="em_city_title">Choose city</string>

    <!-- EnMasse Choose Category. -->
    <string name="em_cat_show_all">Show all</string>

    <!-- EnMasse Account Management. -->
    <string name="em_accounts">Accounts</string>
    <string name="em_account_title">Account Management</string>
    <string name="em_login">Login</string>
    <string name="em_login_form">Login Form</string>
    <string name="em_logout">Logout</string>
    <string name="em_signup">REGISTER</string>
    <string name="em_signup_form">Signup Form</string>
    <string name="em_update_profile_title">Update Profile</string>
    <string name="em_update_profile">Update Profile</string>
    <string name="em_change_password">Change Password</string>

    <string name="em_username">Username</string>
    <string name="em_display_name">FullName</string>
    <string name="em_email">Email</string>
    <string name="em_password">Password</string>
    <string name="em_comfirm_password">Confirm Password</string>

    <string name="em_term_condition">Term &amp; Condition</string>
    <string name="em_term_condition_content">[Please add your company term and condition (display when user signup an account)]</string>

    <string name="em_purchase_history">Purchase History</string>
    <string name="em_purchase_history_date">Date :\u0020</string>
    <string name="em_purchase_history_status">- Status :\u0020</string>

    <!-- EnMasse Deal. -->
    <string name="em_coupon_detail">Coupon Detail</string>
    <string name="em_buy">Buy</string>
    <string name="em_left_time">Time Left</string>
    <string name="em_buy_now">Buy Now</string>
    <string name="em_price">Price</string>
    <string name="em_price_signal">$\u0020</string>
    <string name="em_value">Value</string>
    <string name="em_discount">Discount</string>
    <string name="em_you_save">You save</string>
    <string name="em_days">\u0020 days \u0020</string>

    <string name="em_share">Share</string>
    <string name="em_tweet">Tweet</string>
    <string name="em_youtube_video">View video</string>
    <string name="em_map_location">Map &amp; Location</string>

    <string name="em_discuss">Discuss</string>
    <string name="em_discuss_by">By :\u0020</string>
    <string name="em_discuss_date">Date :\u0020</string>

    <string name="em_buy_to_me">Buy it for me!</string>
    <string name="em_buy_for_friend">Buy it for a friend!</string>

    <string name="em_write_comment">Write Comment</string>
    <string name="em_comment_title">Comments</string>
    <string name="em_comment">Comment</string>
    <string name="em_your_comment">Your comment</string>

    <!-- @1, @2, @3 == variable -->
    <string name="em_deal_type_desc"><![CDATA[ <i><b>$@1</b></i> value - <i><b>@2%</b></i> off - Save <i><b>$@3</b></i> ]]></string>
    <string name="em_deal_price_step"><![CDATA[ <i><b>$@1</b></i> when sales reach <i><b>$@2</b></i> <br> ]]></string>

    <!-- EnMasse Payment. -->
    <string name="em_purchase">Purchase</string>
    <string name="em_purchase_review">Purchase Review</string>
    <string name="em_payment">Payment</string>
    <string name="em_comfirm_payment">Confirm Payment</string>
    <string name="em_payment_schedule">Payment Schedule</string>
    <string name="em_partial_payment">Partial Payment :</string>
    <string name="em_outstanding">Outstanding :</string>

    <string name="em_payment_value">Payment Value :</string>
    <string name="em_total_items">Total Items :</string>
    <string name="em_total">Total :</string>

    <string name="em_receiver_header_text">Below are the delivery information that the coupon was delivered to</string>
    <string name="em_receiver_address">[Receiver Address]</string>
    <string name="em_receiver_phone_number">[Receiver Phone Number]</string>

    <string name="em_friend_header_text">Below are the information of the person that you want to give the coupon</string>
    <string name="em_receiver_name">[Coupon Receiver\'s Name]</string>
    <string name="em_receiver_email">[Coupon Receiver\'s Email]</string>
    <string name="em_note_message">[Note Message]</string>
    <string name="em_friend_footer_text">(NOTE: Please make sure that the name of the person will match his/her personal identify card E.g. NRIC, Credit Card, Driving License)</string>
    <string name="em_choose_other">Choose other : </string>

    <!--  -->

    <string name="em_title_receiver_address">Receiver address</string>
    <string name="em_title_receiver_phone_number">Receiver phonenumber</string>
    <string name="em_title_note_message">Note message</string>
    <string name="em_coupon_receiver_name">Coupon receiver\'s name</string>
    <string name="em_coupon_receiver_email">Coupon receiver\'s email</string>

    <string name="em_order_pending">Pending</string>
    <string name="em_order_paid">Paid</string>
    <string name="em_order_unpaid">Unpaid</string>
    <string name="em_order_delivered">Delivered</string>
    <string name="em_order_refunded">Refunded</string>
    <string name="em_order_waiting_for_refund">Waiting for refund</string>
    <string name="em_order_holding_by_deliverer">Holding by deliverer</string>
    <!--  -->

    <string name="choose_quantity_prompt">Choose quantity</string>

    <string-array name="quantity_arrays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <!-- actionbar -->
    <string name="actionbar_activity_not_found">Failed to open intent</string>
</resources>
