<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@dimen/paymentbackground">
    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical"
        android:background="@dimen/backgroundapp"
         >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/lblName"
                style="@style/DefaultTextLarge"
                android:textColor="@android:color/white"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="$35 for 4-Course Italian Meal at Covelli Italian Bistro Wine Bar in Orchard (Worth $80)" >
            </TextView>

            <Spinner
                android:id="@+id/selQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/quantity_arrays"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:prompt="@string/choose_quantity_prompt" />

            <TextView
                style="@style/HeaderText"
                android:textColor="@android:color/black"
                android:background="@android:color/transparent"
                android:text="@string/em_payment_schedule" >
            </TextView>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:orientation="horizontal" >

                <TextView
                    style="@style/DefaultTextLableControl"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@android:color/black"
                    android:text="@string/em_payment" >
                </TextView>

                <TextView
                    android:id="@+id/lblPaymentValue"
                    style="@style/DefaultTextLableControl"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@android:color/black"
                    android:text="$ 219.00" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:orientation="horizontal" >

                <TextView
                    style="@style/DefaultTextLableControl"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@android:color/black"
                    android:text="@string/em_total_items" >
                </TextView>

                <TextView
                    android:id="@+id/lblTotalItem"
                    style="@style/DefaultTextLableControl"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@android:color/black"
                    android:text="1" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:orientation="horizontal" >

                <TextView
                    style="@style/DefaultTextLableControl"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@android:color/black"
                    android:text="@string/em_total" >
                </TextView>

                <TextView
                    android:id="@+id/lblTotalPrice"
                    style="@style/DefaultTextLableControl"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@android:color/black"
                    android:text="$ 233.10" >
                </TextView>
            </LinearLayout>

            <!-- Prepay Info -->

            <LinearLayout
                android:id="@+id/viewReceiverInfo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <TextView
                    style="@style/HeaderText"
                    android:layout_marginBottom="5dp"
                    android:text="@string/em_receiver_header_text" >
                </TextView>

                <EditText
                    android:id="@+id/txtReceiverAddress"
                    style="@style/DefaultInputControl"
                    android:hint="@string/em_receiver_address" >
                </EditText>

                <EditText
                    android:id="@+id/txtReceiverPhone"
                    style="@style/DefaultInputControl"
                    android:hint="@string/em_receiver_phone_number" >
                </EditText>
            </LinearLayout>

            <!-- End Prepay Info -->


            <!-- Friend Info -->

            <LinearLayout
                android:id="@+id/viewFriendInfo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <TextView
                    style="@style/HeaderText"
                    android:layout_marginBottom="5dp"
                    android:text="@string/em_friend_header_text" >
                </TextView>

                <EditText
                    android:id="@+id/txtReceiverName"
                    style="@style/DefaultInputControl"
                    android:hint="@string/em_receiver_name" >
                </EditText>

                <EditText
                    android:id="@+id/txtReceiverEmail"
                    style="@style/DefaultInputControl"
                    android:inputType="textEmailAddress"
                    android:hint="@string/em_receiver_email" >
                </EditText>

                <EditText
                    android:id="@+id/txtReceiverMsg"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:hint="@string/em_note_message"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:scrollHorizontally="false" >
                </EditText>

                <TextView
                    style="@style/DefaultTextLableControl"
                    android:text="@string/em_friend_footer_text"
                    android:textSize="12sp" >
                </TextView>
            </LinearLayout>

            <!-- End Prepay Info -->


            <!--  -->

            <Button
                android:id="@+id/btnPurchase"
                style="@style/LargeButtonControl"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:background="@color/green_buy_button"
                android:text="@string/em_comfirm_payment" >
            </Button>
        </LinearLayout>

    </ScrollView>
</LinearLayout>