<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@dimen/splashscreen"
     >

    <TextView
        style="@style/HeaderText"
        android:text="@string/em_signup_form"
        android:background="@android:color/transparent"
        android:layout_margin="16dp"
        android:textColor="@android:color/black">
    </TextView>

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="100"
        android:scrollbars="vertical" >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">
            <TextView
                style="@style/DefaultTextLableControl"
                android:text="@string/em_term_condition_content"
                android:textColor="@android:color/black">
            </TextView>
        </android.support.v7.widget.CardView>


    </ScrollView>

    <Button
        android:id="@+id/btnSignup"
        style="@style/LargeButtonControl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_buy_button"
        android:layout_margin="16dp"
        android:text="@string/em_signup" >
    </Button>

</LinearLayout>