<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:background="#ff303030"
     >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <!--  -->

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="100dp"></LinearLayout>

        <EditText
            android:id="@+id/txtName"
            style="@style/DefaultInputControl"
            android:hint="@string/em_display_name"
            android:textColor="#ffffffff"
            android:background="#ff484848"
            android:textColorHint="#ff7d7d7d">
        </EditText>

        <!--  -->

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="20dp"></LinearLayout>

        <EditText
            android:id="@+id/txtUsername"
            style="@style/DefaultInputControl"
            android:hint="@string/em_username"
            android:background="#ff484848"
            android:textColorHint="#ff727272"
            android:textColor="#ffffffff">
        </EditText>

        <!--  -->

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="20dp"></LinearLayout>

        <EditText
            android:id="@+id/txtEmail"
            style="@style/DefaultInputControl"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:background="#ff484848"
            android:textColor="#ffffffff"
            android:textColorHint="#ff787878">
        </EditText>

        <!--  -->

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="20dp"></LinearLayout>

        <EditText
            android:id="@+id/txtPassword"
            style="@style/DefaultInputControl"
            android:hint="@string/em_password"
            android:inputType="textPassword"
            android:background="#ff484848"
            android:textColorHint="#ff777777"
            android:textColor="#ffffffff">
        </EditText>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="20dp"></LinearLayout>

        <EditText
            android:id="@+id/txtRePassword"
            style="@style/DefaultInputControl"
            android:hint="@string/em_comfirm_password"
            android:inputType="textPassword"
            android:background="#ff484848"
            android:textColor="#ffffffff"
            android:textColorHint="#ff727272">
        </EditText>

        <!--  -->

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="50dp"></LinearLayout>

        <Button
            android:id="@+id/btnSignup"
            style="@style/LargeButtonControl"
            android:layout_width="match_parent"
            android:background="#ffff70ac"
            android:text="@string/em_signup" >
        </Button>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="50dp"></LinearLayout>

        <TextView
            style="@style/DefaultTextLableControl"
            android:visibility="invisible"
            android:textColor="#ffffffff">
        </TextView>
        
    </LinearLayout>

</ScrollView>