<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:background="@dimen/backgroundapp"
     >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:isIndicator="false"
            android:numStars="5"
            android:rating="0.0"
            android:stepSize="1.0" >
        </RatingBar>

        <TextView
            style="@style/DefaultTextLableControl"
            android:text="@string/em_comment" >
        </TextView>

        <EditText
            android:id="@+id/txtComment"
            style="@style/DefaultInputControl"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:gravity="top|left"
            android:hint="@string/em_your_comment"
            android:lines="5"
            android:singleLine="false" >
        </EditText>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/btnCancel"
                style="@style/LargeButtonControl"
                android:layout_width="0dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:text="@string/cancel" >
            </Button>
            <Button
                android:id="@+id/btnCommit"
                style="@style/LargeButtonControl"
                android:layout_width="0dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/green_buy_button"
                android:text="@string/em_comment" >
            </Button>


        </LinearLayout>
    </LinearLayout>

</ScrollView>